prusti-tests/tests/parse/ui/closures_fail-2.stderr
error: closure must specify return type
  --> $DIR/closures_fail-2.rs:10:13
   |
10 |       let f = closure!(
   |  _____________^
11 | |         requires(i >= 0),
12 | |         ensures(result == i + 1),
13 | |         |i: i32| i + 1
14 | |     );
   | |_____^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

